--- a/application/views/product.html
+++ b/application/views/product.html
@@ -78,7 +78,7 @@
 			<div class="container desc">
 				<div class="row">
 					<!-- DIRECT SALE ================================================ -->
-					<div class="col-lg-6 border-shadow border-left-radius">
+					<div class="col-lg-6 border-shadow border-left-radius" style="background-color:white">
 						<h2 align="center">Direct Sale</h2>
 						<br>
 						<!-- SEARCH DIRECT SALE-->
@@ -174,7 +174,7 @@
 					<!-- END OF DIRECT SALE ================================================ -->
 
 					<!-- AUCTION ================================================ -->
-					<div class="col-lg-6 border-shadow border-right-radius">
+					<div class="col-lg-6 border-shadow border-right-radius" style="background-color:white">
 						<h2 align="center">Auction</h2>
 						<br>
 						<!-- SEARCH AUCTION-->
@@ -250,10 +250,9 @@
 		</div>
 		<!--end PRODUCT-->
 		<!-- =======================================================================-->
-		<br><br>
 
 		<!-- FOOTER -->
-		<div id="f">
+		<div id="f" style="margin-top:50px">
 			<div class="container">
 				<div class="row">
 				<div class="col-md-6 col-md-push-2">
