แก้ไข Index.php move assets

--- a/application/views/admin_home.html
+++ b/application/views/admin_home.html
@@ -43,11 +43,8 @@
 
             <li class="active"><a href="#">HOME</a></li>
             <li><a href="#">PRODUCT</a></li>
-            <li><a href="#">MY CART</a></li>
-            <li><a href="#">WATCH LIST</a></li>
-            <li><a href="#">ORDER</a></li>
             <li><a href="#">MSG BOX</a></li>
-            <li><a href="#">HISTORY</a></li>
+            <li><a href="#">REPORT</a></li>
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
           	<li><a href="index.html">SIGN OUT</a></li>
           	<li><a href="#">| GuAdmin |</a></li>
@@ -62,11 +59,8 @@
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1>- Admin -</h1>
 				<h3><a href="#" class=""><b>> Product <</b></a></h3>
-				<h3><a href="#" class=""><b>> My Cart <</b></a></h3>
-				<h3><a href="#" class=""><b>> Watch List <</b></a></h3>
-				<h3><a href="#" class=""><b>> Order <</b></a></h3>
 				<h3><a href="#" class=""><b>> Messages Box <</b></a></h3>
-				<h3><a href="#" class=""><b>> History <</b></a></h3>
+				<h3><a href="#" class=""><b>> Report <</b></a></h3>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
