--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -93,6 +93,18 @@
           <ol style="list-style-type:none; padding-left: 0px">
             <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
+                <div class="col-md-6"></div>
+                <div class="col-md-5">
+                  <input type="text" class="form-control" id="inputDirectSaleSearch" placeholder="Search...">
+                </div>
+
+                <div class="col-md-1" style="padding-left:0px">
+                  <button type="button" class="btn btn-default">Search</button>
+                </div>
+              </div>
+            </li>
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
+              <div class="row">
                 <div class="col-md-3">
                   <img src="assets/img/iphone6.jpg" width="185" height="104">
                 </div>
