--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -48,9 +49,9 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 
-            <li class="active"><a href="#">HOME</a></li>
+            <li><a href="#">HOME</a></li>
             <li><a href="#">PRODUCT</a></li>
-            <li><a href="#">MY CART</a></li>
+            <li class="active"><a href="#">MY CART</a></li>
             <li><a href="#">WATCH LIST</a></li>
             <li><a href="#">ORDER</a></li>
             <li><a href="#">MSG BOX</a></li>
@@ -62,14 +63,14 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-  <div id="headerwrap">
+  <div id="myheaderwrap">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2">
-        <h1>Second thought ? Just hit <b>CHECK OUT</b>.</h1>
-        <h2>- DumboBay -</h2>
+  
+        <h2>Second thought ? Just hit <b>CHECK OUT</b>.
+        <b>- DumboBay -</b></h2>
         
-        </div>
+
       </div><!-- row -->
     </div><!-- container -->
   </div><!-- headerwrap -->
@@ -91,8 +92,9 @@
           </div>
 				</div>
         
-        <div class="col-md-10 col-md-offset-1" style="background-color:white; padding-bottom: 20px">
+        <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white; padding-bottom: 20px">
           <ol style="list-style-type:none; padding-left: 0px ;padding-bottom: 0px">
+
             <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-3">
@@ -263,40 +265,19 @@
 	</div><!-- headerwrap -->
 
 
-	<div class="container w">
-		<div class="row centered">
-			<br><br>
-			<div class="col-lg-4">
-				<i class="fa fa-heart"></i>
-				<h4>DESIGN</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<!-- <i class="fa fa-laptop"></i> -->
-				<img src="assets/img/frappe_logo-small.gif">
-				<h4>Frappe & Co,.</h4>
-			</div><!-- col-lg-4 -->
-
-			<div class="col-lg-4">
-				<i class="fa fa-trophy"></i>
-				<h4>SUPPORT</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-			</div><!-- col-lg-4 -->
-		</div><!-- row -->
-		<br>
-		<br>
-	</div><!-- container -->
-	
 	<!-- FOOTER -->
-	<div id="f">
-		<div class="container">
-			<div class="row centered">
-				<a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-		
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- Footer -->
+    <div id="f" style="margin-top:50px">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-6 col-md-push-2">
+          <img src="assets/img/DumboBay-Logo-b.png">
+        </div>
+        <div class="col-md-6 col-md-push-2">
+          <img src="assets/img/Frappe-Logo-bg-sm.png">
+        </div>
+        </div><!-- row -->
+      </div><!-- container -->
+    </div><!-- Footer -->
 
 
 	
