--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<!--<?php
+  $messages;
+
+?>-->
 <htlm lang="en">
   <head>
     <meta charset="utf-8">
@@ -19,110 +23,70 @@
     <link href="assets/css/main.css" rel="stylesheet">
 
     <!-- msg nav-->
-    <style>
-      .op{
-        padding-top:28px;
-      }
-      .mf{
-        margin-bottom: 5px;
-      }
-      #msg_txt {
-          background-color:black;
-          text-align:center;
-          padding:5px;
-      }
-      ul#menu {
-          padding: 10px;
-      }
-
-      ul#menu li {
-          display: inline;
-      }
-
-      ul#menu li a {
-          background-color: black;
-          color: white;
-          padding: 10px 20px;
-          text-decoration: none;
-          border-radius: 4px 4px 0 0;
-      }
-
-      ul#menu li a:hover {
-          background-color: #ff7878;
-      }
-
-      table, th, td {
-        border: 3px solid grey;
-        border-collapse: collapse;
-      }
-</style>
-    </style>
-
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+   
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
+      <![endif]-->
+    </head>
 
-  <body>
+    <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">PRODUCT</a></li>
+              <li><a href="#">MY CART</a></li>
+              <li ><a href="#">WATCH LIST</a></li>
+              <li><a href="#">ORDER</a></li>
+              <li class="active"><a href="#">MSG BOX</a></li>
+              <li><a href="#">HISTORY</a></li>
+              <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
+              <li><a href="index.html">SIGN OUT</a></li>
+              <li><a href="#">| Pookpik |</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+      </div>
+      <div>
+        <div class="container w ">
+          <div class="container">
+            <div class="row">
+              <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
+              <div class="col-lg-6 col-lg-push-4">
+                <img src="assets/img/message-icon.svg" style="width:120px;height:120px">
+              </div>
+              <div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
+                <h1>Message Box</h1>
+              </div>
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+        <div class="container">
+          <div class="row">
+            <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
+            <div class="col-md-6">
+              <a href="newMessage.html"><button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">NEW Message</button></a>
+            </div>
+            <div class="col-md-6">
 
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">PRODUCT</a></li>
-            <li><a href="#">MY CART</a></li>
-            <li ><a href="#">WATCH LIST</a></li>
-            <li><a href="#">ORDER</a></li>
-            <li class="active"><a href="#">MSG BOX</a></li>
-            <li><a href="#">HISTORY</a></li>
-            <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-            <li><a href="index.html">SIGN OUT</a></li>
-            <li><a href="#">| Pookpik |</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-    <div>
-      <div class="container w ">
-        <div class="container">
-          <div class="row">
-            <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
-            <div class="col-lg-6 col-lg-push-4">
-              <img src="assets/img/message-icon.svg" style="width:120px;height:120px">
-            </div>
-            <div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
-              <h1>Message Box</h1>
             </div>
           </div><!-- row -->
-        </div><!-- container -->
-      </div>
-      
-        <div class="container">
-          <div class="row">
-            <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
-            <div class="col-lg-6">
-              <button type="submit" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">NEW Messege</button>
-            </div>
-            <div class="col-lg-6">
-        
-            </div>
-          </div><!-- row -->
- 
-      </div>
-      <div class="container border-shadow border-radius" style="background-color:white">
+
+        </div>
+        <div class="container border-shadow border-radius" style="background-color:white">
           <!-- header message table -->
           <div class="row centered">
             <div class="col-sm-1 op">
@@ -146,16 +110,16 @@
           <!-- body message table -->
           <div class="row mf">
             <div class="col-sm-1 centered">
-              <a href="#"><img src="assets/img/del-icon.png"></a>
+              <a href="message_c/delete/msgid"><img src="assets/img/del-icon.png"></a>
             </div>
             <div class="col-sm-1 centered">
-              <a href="#"><img src="assets/img/reply-icon.jpg"></a>
+              <a href="message_c/reply/msgid"><img src="assets/img/reply-icon.jpg"></a>
             </div>
             <div class="col-sm-3">
               <h4>Natchez@dumbobay.com</h4>
             </div>
             <div class="col-sm-4">
-              <h4>You have got iPhone 6 !!</h4>
+              <a href="message_c/messageDetail/msgid" ><h4>I need small ears</h4>
             </div>
             <div class="col-sm-3">
               <h4>1 Nov 2014 at 7:03 AM</h4>
@@ -197,170 +161,31 @@
           </div>
           
           <!-- end of body message table -->
-      </div><!-- container -->
-    </div>
-    <!-- msg part-->
+        </div><!-- container -->
+      </div>
+      <!-- msg part-->
 
-    <!-- Modal for new msg-->
-    <div class="modal fade" id="msgModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="msgModelLabel">DumboBay</h4>
-          </div>
-          <!-- Log in form -->
-          <form class="form-horizontal">
-            <div class="modal-body">
-              <div class="row centered">
-              <fieldset>
-                <b><legend>New Messege</legend></b>
-                <div align="center">
-                <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Send to :</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="text" class="form-control" id="inputEmail" placeholder="Enter username here." >
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputTopic" class="col-lg-2 control-label">Topic :</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="text" class="form-control" id="inputMsg" placeholder="Messege's topic.">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputMsg" class="col-lg-2 control-label">Messege :</label>
-                  <div class="col-lg-10">
-                    <input style="width:100%" type="text" class="form-control" id="inputMsg" placeholder="type your messege here.">
-                  </div>
-                </div>
-                </div>
-              </fieldset>
-              </div>
+      <!-- FOOTER -->
+      <div id="f" style="margin-top:50px">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-push-2">
+              <img src="assets/img/DumboBay-Logo-b.png">
             </div>
-          <div class="modal-footer">
-            <a href="messegeBox.html"><button type="button" class="btn btn-danger">Send</button></a>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          </div>
-          </form>
-          <!-- /msg form -->
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <!-- Modal for reply msg-->
-    <div class="modal fade" id="replyModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="replyModelLabel">DumboBay</h4>
-          </div>
-          <!-- Log in form -->
-          <form class="form-horizontal">
-            <div class="modal-body">
-              <div class="row centered">
-              <fieldset>
-                <b><legend>Reply Messege</legend></b>
-                <div align="center">
-                <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Send to :</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="text" class="form-control" id="inputEmail" placeholder="SAME ADDRESS AH!!!!" >
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputTopic" class="col-lg-2 control-label">Topic :</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="text" class="form-control" id="inputMsg" placeholder="Reply: the same topic">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputMsg" class="col-lg-2 control-label">Messege :</label>
-                  <div class="col-lg-10">
-                    <input style="width:100%" type="text" class="form-control" id="inputMsg" placeholder="type your messege here.">
-                  </div>
-                </div>
-                </div>
-              </fieldset>
-              </div>
+            <div class="col-md-6 col-md-push-2">
+              <img src="assets/img/Frappe-Logo-bg-sm.png">
             </div>
-          <div class="modal-footer">
-            <a href="messegeBox.html"><button type="button" class="btn btn-danger">Send</button></a>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          </div>
-          </form>
-          <!-- /reply form -->
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-   
-
-    <!-- Modal to sign in-->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">DumboBay</h4>
-          </div>
-          <!-- Log in form -->
-          <form class="form-horizontal">
-            <div class="modal-body">
-              <div class="row centered">
-              <fieldset>
-                <legend>SIGN IN</legend>
-                <div align="center">
-                <div class="form-group">
-                  <label style="left:20%" for="inputEmail" class="col-lg-2 control-label">Username</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="text" class="form-control" id="inputEmail" placeholder="Put your username in here." >
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label style="left:20%" for="inputPassword" class="col-lg-2 control-label">Password</label>
-                  <div class="col-lg-10">
-                    <input style="width:50%" type="password" class="form-control" id="inputPassword" placeholder="********">
-                  </div>
-                </div>
-                </div>
-              </fieldset>
-              </div>
-            </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In</button></a>
-            <a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In:Buyer</button></a>
-            <a href="seller_home.html"><button type="button" class="btn btn-danger">Sign In:Seller</button></a>
-            <a href="admin_home.html"><button type="button" class="btn btn-danger" >Sign In:Admin</button></a>
-          </div>
-          </form>
-          <!-- /Log in form -->
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-		<!-- FOOTER -->
-    <div id="f" style="margin-top:50px">
-      <div class="container">
-        <div class="row">
-        <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/DumboBay-Logo-b.png">
-        </div>
-        <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/Frappe-Logo-bg-sm.png">
-        </div>
-        </div><!-- row -->
-      </div><!-- container -->
-    </div><!-- Footer -->
+          </div><!-- row -->
+        </div><!-- container -->
+      </div><!-- Footer -->
 
 	<!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
-	</body>
+</body>
 </html>
