--- a/application/views/index.html
+++ b/application/views/index.html
@@ -43,8 +43,8 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="index.html">HOME</a></li>
 					<!--<li><a data-toggle="modal" data-target="#myModal" href="#myModal" class="signin">SIGN IN</a></li>-->
-					<li><a href="signin.html">SIGN IN</a></li>
-					<li><a href="services.html">SIGN UP</a></li>
+					<li><a href="home_c/login">SIGN IN</a></li>
+					<li><a href="home_c/register">SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -56,7 +56,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
 					<h2>- DumboBay -</h2>
-					<h2><a href="product.html" class="link-product"><b>> Products <</b></a></h2>
+					<h2><a href="home_c/product_c" class="link-product"><b>> Products <</b></a></h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
