--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -11,12 +11,12 @@
 	<title>DUMBOBAY - shopping area</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/dumbobaycss.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="assets/css/main.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 	<style type="text/css">
 		.signin{
 			width: 70%;
@@ -49,9 +49,9 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">HOME</a></li>
-					<li class="active"><a href="signin.html">SIGN IN</a></li>
-					<li><a href="signup.html">SIGN UP</a></li>
+					<li><a href="home_c">HOME</a></li>
+					<li class="active"><a href="home_c/login">SIGN IN</a></li>
+					<li><a href="home_c/register">SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -86,7 +86,7 @@
 						</div>
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 						<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a><br><br>
-						<a href="signup.html"><button type="button" value="login" class="btn btn-info">Sign Up</button></a>
+						<a href="home_c/register"><button type="button" value="login" class="btn btn-info">Sign Up</button></a>
 						<span class="help-block">If you have no account, click Sign Up.</span>
 					</div>
 
@@ -94,19 +94,7 @@
 			</div>
 		</form>
 	</div>
-	<!-- FOOTER -->
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-push-2">
-					<img src="assets/img/DumboBay-Logo-b.png">
-				</div>
-				<div class="col-md-6 col-md-push-2">
-					<img src="assets/img/Frappe-Logo-bg-sm.png">
-				</div>
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- Footer -->
+	
 
 
 	<!-- MODAL FOR CONTACT -->
