--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -15,12 +15,12 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
     <!-- msg nav-->
    
