--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -11,13 +11,12 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-
+  <!-- Custom styles for this template -->
+  <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -44,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><<?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
