--- a/application/views/index.html
+++ b/application/views/index.html
@@ -37,11 +37,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
+				<a class="navbar-brand" href="home_c" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="index.html">HOME</a></li>
+					<li class="active"><a href="home_c">HOME</a></li>
 					<!--<li><a data-toggle="modal" data-target="#myModal" href="#myModal" class="signin">SIGN IN</a></li>-->
 					<li><a href="home_c/login">SIGN IN</a></li>
 					<li><a href="home_c/register">SIGN UP</a></li>
@@ -56,7 +56,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
 					<h2>- DumboBay -</h2>
-					<h2><a href="home_c/product_c" class="link-product"><b>> Products <</b></a></h2>
+					<h2><a href="home_c/product" class="link-product"><b>> Products <</b></a></h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -112,7 +112,6 @@
 			</div>
 		</div>
 	</div> -->
->>>>>>> b1bdc853120fe178d79edba0e4747995f1506a27
 
 
 <!-- Bootstrap core JavaScript
