--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -125,15 +125,22 @@
                       <button type="button" class="btn btn-default">Bid</button>
                     </div>
                     <div class="col-md-10">
+                      
                       <div class="row">
                         <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
-                        <div class="col-md-5" style="left:0%; padding-right:0px">
-                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+
+                        <div class="form-group col-md-7" style="left:0%; padding-right:0px">
+                          <div class="input-group">
+                
+                            <input type="text" class="form-control"  placeholder="Enter max bid">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Bid</button>
+                            </span>
+                          </div>
                         </div>
-                        <div style="float:left">
-                          <button type="button" class="btn btn-default">Bid</button>
-                        </div>
+
                       </div>
+
                     </div>
                   </div>
                 </div>
@@ -164,12 +171,17 @@
                     <div class="col-md-10">
                       <div class="row">
                         <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
-                        <div class="col-md-5" style="left:0%; padding-right:0px">
-                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+
+                        <div class="form-group col-md-7" style="left:0%; padding-right:0px">
+                          <div class="input-group">
+                
+                            <input type="text" class="form-control"  placeholder="Enter max bid">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Bid</button>
+                            </span>
+                          </div>
                         </div>
-                        <div style="float:left">
-                          <button type="button" class="btn btn-default">Bid</button>
-                        </div>
+
                       </div>
                     </div>
                   </div>
@@ -199,15 +211,22 @@
                       <button type="button" class="btn btn-default">Bid</button>
                     </div>
                     <div class="col-md-10">
+                      
                       <div class="row">
                         <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
-                        <div class="col-md-5" style="left:0%; padding-right:0px">
-                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+
+                        <div class="form-group col-md-7" style="left:0%; padding-right:0px">
+                          <div class="input-group">
+                
+                            <input type="text" class="form-control"  placeholder="Enter max bid">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Bid</button>
+                            </span>
+                          </div>
                         </div>
-                        <div style="float:left">
-                          <button type="button" class="btn btn-default">Bid</button>
-                        </div>
+
                       </div>
+
                     </div>
                   </div>
                 </div>
@@ -236,14 +255,20 @@
                       <button type="button" class="btn btn-default">Bid</button>
                     </div>
                     <div class="col-md-10">
+                      
                       <div class="row">
                         <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
-                        <div class="col-md-5" style="left:0%; padding-right:0px">
-                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+
+                        <div class="form-group col-md-7" style="left:0%; padding-right:0px">
+                          <div class="input-group">
+                
+                            <input type="text" class="form-control"  placeholder="Enter max bid">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Bid</button>
+                            </span>
+                          </div>
                         </div>
-                        <div style="float:left">
-                          <button type="button" class="btn btn-default">Bid</button>
-                        </div>
+
                       </div>
                       
                     </div>
