--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -74,6 +74,8 @@
 	</div><!-- headerwrap -->
 	<!-- ======================================================================= -->
 	<!-- Log in form -->
+	<?php echo validation_errors(); ?>
+   	<?php echo form_open('login_c'); ?>
 	<div class="signin">
 		<form class="form-horizontal" >
 			<div class="row centered">
