--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -88,7 +88,7 @@
           </div>
 				</div>
         
-        <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
+        <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
           <ol style="list-style-type:none; padding-left: 0px">
             <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
