--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -93,7 +93,9 @@
           <ol style="list-style-type:none; padding-left: 0px">
             <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
-                <div class="col-md-6"></div>
+                <div class="col-md-6">
+                  <button type="button" class="btn btn-danger">Auto</button>
+                </div>
                 <div class="col-md-5">
                   <input type="text" class="form-control" id="inputDirectSaleSearch" placeholder="Search...">
                 </div>
@@ -116,7 +118,7 @@
                 <div class="col-md-5">
                   <div class="row" style="padding-top:10px">
                     <div class="col-md-12">
-                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr
+                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>-
                     </div>
                   </div>
                   <div class="row">
@@ -160,7 +162,7 @@
                 <div class="col-md-5">
                   <div class="row" style="padding-top:10px">
                     <div class="col-md-12">
-                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr
+                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr<br><strong>bidding: </strong>auto<br><strong>your max bid: </strong>200 bath
                     </div>
                   </div>
                   <div class="row">
@@ -202,7 +204,7 @@
                 <div class="col-md-5">
                   <div class="row" style="padding-top:10px">
                     <div class="col-md-12">
-                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr
+                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>-
                     </div>
                   </div>
                   <div class="row">
@@ -246,7 +248,7 @@
                 <div class="col-md-5">
                   <div class="row" style="padding-top:10px">
                     <div class="col-md-12">
-                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr
+                      <strong>current bid: </strong>100 bath<br><strong>time left: </strong>18 hr<br><strong>bidding: </strong>manual<br><strong>your max bid: </strong>-
                     </div>
                   </div>
                   <div class="row">
