--- a/application/views/footer.html
+++ b/application/views/footer.html
@@ -3,10 +3,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-push-2">
-					<img src="assets/img/DumboBay-Logo-b.png">
+					<?php echo img("assets/img/DumboBay-Logo-b.png");?>
 				</div>
 				<div class="col-md-6 col-md-push-2">
-					<img src="assets/img/Frappe-Logo-bg-sm.png">
+					<?php echo img("assets/img/Frappe-Logo-bg-sm.png");?>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
