--- a/application/views/profile.html
+++ b/application/views/profile.html
@@ -11,12 +11,12 @@
 	<title>DUMBOBAY - shopping area</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/dumbobaycss.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link href="assets/css/dumbobaycss.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="assets/css/main.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet">
 	<style type="text/css">
 		.profilecontent{
 			margin-top:15px;
@@ -79,18 +79,10 @@
 	<div>
 		<div class="container">
 			<div>
-				<div class="col-md-10 col-md-offset-1" style="padding-top:50px; padding-bottom:10px">
-					<div class="row">
-						<div class="col-md-2" style="padding-left:20px">
-							<img src="assets/img/watchlist.png" width="130" height="100">
-						</div>
-						<div class="col-md-12">
-							<h1 style="color:black;padding-top:13px">My Profile</h1>
-						</div>
-						<div class="col-md-2" style="padding-top:70px;padding-left:70px">
-
-						</div>
-					</div>
+				<div class="col-md-10 col-md-offset-1 centered" style="padding-top:30px;padding-bottom:25px;">
+					<legend>
+						<h1>My Profile</h1>
+					</legend>
 				</div>
 				<div class="col-md-10 col-md-offset-1">
 					<div class="row">
@@ -105,7 +97,7 @@
 						</div>
 					</div><!-- row -->
 				</div>
-				<div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
+				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
 					<div class="row profilecontent">
 						<div class="col-md-3" align="right">
 							<label class="control-label">Name:</label>								
