--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -36,12 +36,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+          <a class="navbar-brand" href="home_c">DUMB<i class="fa fa-circle"></i>BAY</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-
-            <li class="active"><a href="index.html">HOME</a></li>
+            <li class="active"><a href="home_c">HOME</a></li>
             <li><a href="home_c/product">PRODUCT</a></li>
             <li><a href="home_c/cart">MY CART</a></li>
             <li><a href="home_c/watchlist">WATCH LIST</a></li>
@@ -96,15 +95,7 @@
 		<br>
 	</div><!-- container -->
 	
-	<!-- FOOTER -->
-	<div id="f">
-		<div class="container">
-			<div class="row centered">
-				<a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-		
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- Footer -->
+	
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
