--- a/application/views/paymentForm.html
+++ b/application/views/paymentForm.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -11,12 +12,12 @@
 	<title>DUMBOBAY - shopping area</title>
 
 	<!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 	<style type="text/css">
 		.control-label{
 			padding-top: 4px;
@@ -42,7 +43,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -55,7 +56,7 @@
 					<li><a href="#">HISTORY</a></li>
 					<!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
 					<li><a href="index.html">SIGN OUT</a></li>
-					<li class="active"><a href="#">| Pookpick |</a></li>
+					<li><a href="#">| Pookpick |</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -69,65 +70,78 @@
 		</div><!-- container -->
 	</div><!-- headerwrap -->
 	<!-- ======================================================================= -->
-	<!-- Profile -->
 	<div>
 		<div class="container">
 			<div>
 				<div class="col-md-10 col-md-offset-1 centered" style="padding-top:50px; padding-bottom:10px">
 					<legend>
-						<h1>Edit Profile</h1>
+						<h1>Payment</h1>
 					</legend>
 				</div>
-				
-				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px">
-					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Name:</label>
-						<div class="col-md-9">
-							<input type="text" class="form-control" id="name" placeholder="Pookpick" autofocus>
-						</div>
-					</div>
-					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Surname:</label>
-						<div class="col-md-9">
-							<input type="text" class="form-control" id="surname" placeholder="Leelasupakul">
-						</div>
-					</div>
-					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Address:</label>
-						<div class="col-md-9">
-							<input type="text" class="form-control" id="address" placeholder="123 Bangrak Bangkok 10400">
-						</div>
-					</div>
-					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">E-mail:</label>						
-						<div class="col-md-9">
-							<input type="text" class="form-control" id="email" placeholder="pookkistaa@gmail.com">
-						</div>
-					</div>
-					<div class="row form-group">
-						<label class="col-md-3 control-label" align="right">Tel.:</label>
-						<div class="col-md-9">
-							<input type="text" class="form-control" id="tel" placeholder="088-888-3333">
-						</div>
-					</div>
-					<div class="row form-group">
-						<div class="col-md-3" align="right">
-						
-						</div>
-						<div class="col-md-9">
-							<a href="profile.html"><button type="submit" class="btn btn-default" >Cancel</button></a>
-							<button type="submit" class="btn btn-info" >Save</button>
+				<!-- item list -->
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px;">
+						<?php 
+						foreach ($products as $product=>$row){
+							echo '<div class="row">';
+							echo '<div class="col-md-9">';
+							echo $row['name'];
+							echo '</div>';
+							echo '<div class="col-md-3">';
+							echo $row['price'].'Baht';
+							echo '</div>';
+							echo '</div>';
+						}
+						?>
+						<hr>
+						<div class="row" style="margin-top:-20px">
+							<div class="col-md-9">
+								<h3>TOTAL</h3>
+							</div>
+							<div class="col-md-3">
+								<h3><?php echo $price; ?> Baht</h3>
+							</div>
 						</div>
 					</div>
 				</div>
+				<?php echo validation_errors(); ?>
+				<?php echo form_open('payment_c/index/'.$price); ?>
+					<div class="row">
+						<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px">
+							<div class="row form-group">
+								<label class="col-md-3 control-label" align="right">VISA No.</label>
+								<div class="col-md-9">
+									<input type="text" class="form-control" id="visano" autofocus>
+								</div>
+							</div>
+							<div class="row form-group">
+								<label class="col-md-3 control-label" align="right">Password</label>
+								<div class="col-md-9">
+									<input type="password" class="form-control" id="visapw" >
+								</div>
+							</div>
+							<div class="row form-group">
+								<label class="col-md-3 control-label" align="right">Send Address</label>
+								<div class="col-md-9">
+									<input type="text" class="form-control" id="sendaddress">
+								</div>
+							</div>
+							<div class="row form-group">
+								<div class="col-md-3" align="right">
+								
+								</div>
+								<div class="col-md-9">
+									<a href="cart.html"><button type="submit" class="btn btn-default" >Cancel</button></a>
+									<button type="submit" class="btn btn-success" >Submit</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</form>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
-	<!-- end of Profile -->
 
-	<!-- Footer -->
-
-	<!-- end of Footer-->
 
 <!-- Bootstrap core JavaScript
 	================================================== -->
