--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -48,7 +48,7 @@
               <li><a href="#">MY CART</a></li>
               <li ><a href="#">WATCH LIST</a></li>
               <li><a href="#">ORDER</a></li>
-              <li class="active"><a href="#">MSG BOX</a></li>
+              <li><a href="#">MSG BOX</a></li>
               <li><a href="#">HISTORY</a></li>
               <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
               <li><a href="index.html">SIGN OUT</a></li>
@@ -65,7 +65,7 @@
             <div class="container w ">
               <div class="container">
                 <div class="row centered">              
-                  <legend><h1>Message Box</h1></legend>
+                  <legend><h1>Problem Report</h1></legend>
                 </div>
               </div><!-- row -->
             </div><!-- container -->
@@ -80,24 +80,18 @@
               
                   <div class="row centered" style="margin-right:20px">
                     <fieldset>
-                      <h3>New Messege</h3>
                       <div align="center">
-                        <div class="form-group">
-                          <label for="inputEmail" class="col-lg-2 control-label">Send to :</label>
-                          <div class="col-lg-10">
-                            <input type="text" class="form-control" id="msgReceiver" placeholder="Enter username here." >
-                          </div>
-                        </div>
+                        <h3></h3>
                         <div class="form-group">
                           <label for="inputTopic" class="col-lg-2 control-label">Topic :</label>
                           <div class="col-lg-10">
-                            <input type="text" class="form-control" id="msgSubject" placeholder="Messege's topic.">
+                            <input type="text" class="form-control" id="msgSubject" placeholder="Message's topic.">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label for="inputMsg" class="col-lg-2 control-label">Message :</label>
+                          <label for="inputMsg" class="col-lg-2 control-label">Problem Description :</label>
                           <div class="col-lg-10">
-                            <textarea rows="4" class="form-control" id="msgText" placeholder="type your messege here."></textarea>
+                            <textarea rows="4" class="form-control" id="msgText" placeholder="type your message here."></textarea>
                           </div>
                         </div>
                       </div>
@@ -107,7 +101,7 @@
                   <div class="col-lg-2">
                   </div>
                   <div class="col-lg-10">
-                    <a href="message_c/sendMessage"><button type="button" class="btn btn-warning">Send</button></a>
+                    <a href="message_c/sendMessage"><button type="button" class="btn btn-danger">Report</button></a>
                   <a href="message_c/manageMessageBox"><button type="button" class="btn btn-default" >Cancel</button></a>
                   </div>
                 </div>
