--- a/application/views/seller_home.html
+++ b/application/views/seller_home.html
@@ -11,11 +11,12 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+  <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,21 +37,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+          <a class="navbar-brand" href="home_c">DUMB<i class="fa fa-circle"></i>BAY</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 
-            <li class="active"><a href="#">HOME</a></li>
-            <li><a href="#">PRODUCT</a></li>
-            <li><a href="#">MY CART</a></li>
-            <li><a href="#">WATCH LIST</a></li>
-            <li><a href="#">ORDER</a></li>
-            <li><a href="#">MSG BOX</a></li>
-            <li><a href="#">HISTORY</a></li>
+            <li class="active"><a href="home_c">HOME</a></li>
+            <li><a href="home_c/product">PRODUCT</a></li>
+            <li><a href="home_c/watchlist">WATCH LIST</a></li>
+            <li><a href="home_c/message">MSG BOX</a></li>
+            <li><a href="home_c/history">HISTORY</a></li>
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-          	<li><a href="index.html">SIGN OUT</a></li>
-          	<li><a href="#">| IamSeller |</a></li>
+          	<li><a href="home_c/logout">SIGN OUT</a></li>
+          	<li><a href="home_c/memberdetail">| $username |</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,12 +60,10 @@
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1>- Seller -</h1>
-				<h3><a href="#" class=""><b>> Product <</b></a></h3>
-				<h3><a href="#" class=""><b>> My Cart <</b></a></h3>
-				<h3><a href="#" class=""><b>> Watch List <</b></a></h3>
-				<h3><a href="#" class=""><b>> Order <</b></a></h3>
-				<h3><a href="#" class=""><b>> Messages Box <</b></a></h3>
-				<h3><a href="#" class=""><b>> History <</b></a></h3>
+				<h3><a href="home_c/product" class=""><b>> Product <</b></a></h3>
+				<h3><a href="home_c/watchlist" class=""><b>> Watch List <</b></a></h3>
+				<h3><a href="home_c/message" class=""><b>> Messages Box <</b></a></h3>
+				<h3><a href="home_c/history" class=""><b>> History <</b></a></h3>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -98,15 +95,6 @@
 		<br>
 	</div><!-- container -->
 	
-	<!-- FOOTER -->
-	<div id="f">
-		<div class="container">
-			<div class="row centered">
-				<a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-		
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- Footer -->
 
 
 	
@@ -116,6 +104,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src=<?echo base_url("?>assets/js/bootstrap.min.js");?>></script>
+  
   </body>
 </html>
