--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -11,12 +11,12 @@
 	<title>DUMBOBAY - shopping area</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/dumbobaycss.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+	<link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+	<link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
 	<!-- Custom styles for this template -->
-	<link href="assets/css/main.css" rel="stylesheet">
+	<link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 	<style type="text/css">
 		.signin{
 			width: 70%;
@@ -120,12 +120,6 @@
 							<label class="col-md-3 control-label" align="right">Tel.</label>
 							<div class="col-md-9">
 								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your telephone number here." >
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-md-3 control-label" align="right">Send Address</label>
-							<div class="col-md-9">
-								<input type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your send address here." >
 							</div>
 						</div>
 						<div class="form-group">
