--- a/application/views/viewMessage.html
+++ b/application/views/viewMessage.html
@@ -68,22 +68,16 @@
           <div>
             <div class="container w ">
               <div class="container">
-                <div class="row">
-                  <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
-                  <div class="col-lg-6 col-lg-push-4">
-                    <img src="assets/img/message-icon.svg" style="width:120px;height:120px">
-                  </div>
-                  <div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
-                    <h1>Message Box</h1>
-                  </div>
-                </div><!-- row -->
-              </div><!-- container -->
-            </div>
+                <div class="row centered">              
+                  <legend><h1>Message Box</h1></legend>
+                </div>
+              </div><!-- row -->
+            </div><!-- container -->
             <div class="container">
           <div class="row">
             <!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
             <div class="col-lg-6">
-              <a href="messageBox.html"><button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">All Message</button></a>
+              <a href="messageBox.html"><button type="button" class="btn btn-default" style="margin-top:-10px;margin-bottom:20px">All Messages</button></a>
             </div>
             <div class="col-lg-6">
               
@@ -99,10 +93,10 @@
 
             <div class="col-md-10 col-md-offset-1 border-shadow border-radius" style="background-color:white">
               <form class="form-horizontal">
-                <div class="modal-body">
+              
                   <div class="row">
                     <fieldset>
-                      <b align="center"><legend>Messege</legend></b>
+                      <h3 align="center">View Message</h3>
                       <div>
                         <div class="form-group">
                           <label for="inputEmail" class="col-lg-2 control-label" align="right">From :</label>
@@ -123,13 +117,11 @@
                           </div>
                         </div>
                       </div>
+
                     </fieldset>
                   </div>
-                </div>
-                <div class="modal-footer">
-                  <a href="#"><img src="assets/img/del-icon.png"></a>
-                  <a href="#"><img src="assets/img/reply-icon.jpg"></a>
-                </div>
+                
+                
               </form>
             </div>
           </div><!-- row -->
