--- a/application/views/product.html
+++ b/application/views/product.html
@@ -77,10 +77,10 @@
 			</div>
 			<div class="container desc">
 				<div class="border-radius" style="background-color:white">
-				<div class="row">
+				<!--<div class="row">
 					<h2 class="col-lg-6" align="center">Direct Sale</h2>
 					<h2 class="col-lg-6" align="center">Auction</h2>
-				</div>
+				</div>-->
 				<div class="row">
 					<!-- DIRECT SALE ================================================ -->
 					<div class="col-lg-6 border-left-radius" style="background-color:white">
