--- a/application/views/admin_home.html
+++ b/application/views/admin_home.html
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-    <!-- Bootstrap core CSS -->
-   <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
-
+<?php
+    include 'HTMLHeader.html';
+  ?>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,30 +15,11 @@
   <body>
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home_c">DUMB<i class="fa fa-circle"></i>BAY</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-
-            <li class="active"><a href="home_c">HOME</a></li>
-            <li><a href="home_c/product">PRODUCT</a></li>
-            <li><a href="home_c/message">MSG BOX</a></li>
-            <li><a href="home_c/report">REPORT</a></li>
-            <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-          	<li><a href="home_c/logout">SIGN OUT</a></li>
-          	<li><a href="">| $username |</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    
+          <?php
+            include 'admin_menu.html'
+          ?>
+      
 
 	<div id="headerwrap">
 		<div class="container">
