--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
-
-	<title>DUMBOBAY - shopping area</title>
-
-	<!-- Bootstrap core CSS -->
-	<link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-	<link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-	<link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
-
-	<!-- Custom styles for this template -->
-	<link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
+	<?php
+		include 'HTMLheader.html';
+	?>
 	<style type="text/css">
 		.signin{
 			width: 70%;
@@ -37,25 +24,9 @@
 <body>
 
 	<!-- Fixed navbar -->
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="signin.html">SIGN IN</a></li>
-					<li class="active"><a href="signup.html">SIGN UP</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</div>
+	<?php
+		include 'guest_menu.html';
+	?>
 	<!-- =======================================================================-->
 	<div id="myheaderwrap">
 		<div class="container">
