Edit the View->Product menu bar for each type of users Edit controller->product_c for this reason Debug the Menu Bars

--- a/application/views/seller_menu.html
+++ b/application/views/seller_menu.html
@@ -1,3 +1,15 @@
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="home_c" style="padding:2px 15px 2px 15px"> <?php echo img ("assets/img/dumbobay-logo-sm.png");?>></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
 
             <li><a href="home_c">HOME</a></li>
             <li><a href="home_c/product">PRODUCT</a></li>
@@ -7,3 +19,10 @@
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
           	<li><a href="home_c/logout">SIGN OUT</a></li>
           	<li><a href=<?php echo "member_c/memberDetail/".$username;?>>| <?php echo " ".$username." ";?> |</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+
+           
